--- a/src/app/component/admin/form/addproduct/addproduct.component.html
+++ b/src/app/component/admin/form/addproduct/addproduct.component.html
@@ -90,11 +90,11 @@
               />
             </div>
             <div class="col-md-6">
-              <label> Giá sản phẩm</label>
+              <label> Giá bán sản phẩm</label>
               <input
                 class="form-control"
                 type="number"
-                placeholder="Giá sản phẩm"
+                placeholder="Giá bán sản phẩm"
                 [(ngModel)]="addProductForm.priceSell"
                 required
                 name="price"
@@ -107,11 +107,11 @@
               </div>
             </div>
             <div class="col-md-6">
-              <label>Giảm cũ</label>
+              <label>Giá cũ</label>
               <input
                 class="form-control"
                 type="text"
-                placeholder="Sale"
+                placeholder="Giá cũ"
                 [(ngModel)]="addProductForm.sale"
               />
             </div>
