--- a/src/app/component/admin/home/category/category.component.html
+++ b/src/app/component/admin/home/category/category.component.html
@@ -1,7 +1,10 @@
 
 <div style="margin-bottom: 300px">
   <h1 class="mt-4">Quản lý thể loại sản phẩm</h1>
-      <button style="margin-left: 14px;height: 50px;margin-bottom:20px ;" (click)="addCate()">Thêm thể loại sản phẩm</button>
+      <button style="margin-left: 10px;
+      height: 41px;
+      margin-bottom: 20px;
+      width: 255px;" (click)="addCate()">Thêm thể loại sản phẩm</button>
   <table id="customers" style="border-collapse: collapse">
     <tr>
       <th>EDIT</th>
