--- a/src/app/component/admin/home/product/product.component.html
+++ b/src/app/component/admin/home/product/product.component.html
@@ -4,7 +4,10 @@
   </div>
   <div class="col-6 col-md-6">
     <button
-      style="margin-left: 14px; height: 50px; margin-bottom: 20px; width: 250px"
+      style="margin-left: 10px;
+      height: 41px;
+      margin-bottom: 20px;
+      width: 255px;"
       (click)="addProduct()"
     >
       Thêm sản phẩm
@@ -115,7 +118,7 @@
           </div><!-- /.modal-dialog -->
         </div><!-- /.modal -->
         <td>{{ prod.code }}</td>
-        <td>{{ prod.priceSell }}</td>
+        <td>{{ prod.priceSell | currency: 'VND'}}</td>
         <td>{{ prod.productTypeName }}</td>
         <td>{{ prod.brandName }}</td>
         <td>
