--- a/src/app/component/admin/home/useradmin/useradmin.component.html
+++ b/src/app/component/admin/home/useradmin/useradmin.component.html
@@ -1,38 +1,65 @@
 <div class="row" style="margin-bottom: 300px">
-
   <div class="col-12 col-md-12">
     <h1>Quản lý User</h1>
   </div>
-
-  <div class="col-6 col-md-6">
+  <div class="col-4 col-md-4">
     <button
-      style="margin-left: 14px; height: 50px; margin-bottom: 20px; width: 250px"
+      style="margin-left: 10px;
+      height: 41px;
+      margin-bottom: 20px;
+      width: 255px;"
       (click)="addUser()"
     >
       Thêm User
     </button>
   </div>
-  <div class="col-6 col-md-6">
+  <div class="col-4 col-md-4">
     <div class="row">
-      <div class=" col-md-6">
+      <div class="col-md-6">
         <div class="product-view-top">
-          <form action="" #formSearch="ngForm" (ngSubmit)="timkiem()">
-            <div class="row" >
-                <div class="col-md-5">
-                  <select style="width:250px; height: 38px;" [(ngModel)]="code" name="category">
-                    <option *ngFor="let item of code"  [value]="item.value"> {{ item.viewValue }}</option>
-                  </select>
-                </div>
+          <form>
+            <div class="row">
+              <div class="col-md-5">
+                <select
+                  style="width: 250px; height: 38px"
+                  [(ngModel)]="codeValue"
+                  name="category"
+                >
+                  <option *ngFor="let item of code" [value]="item.value">
+                    {{ item.viewValue }}
+                  </option>
+                </select>
+              </div>
             </div>
           </form>
         </div>
-    </div>
-    <div  class=" col-md-6">
-      <input style=" width: 110px;height:37px;"type="submit" value="Tìm Kiếm">
-    </div>
+      </div>
+      <div class="col-md-6">
+        <input
+          style="width: 110px; height: 37px; margin-left:65px"
+          type="button"
+          value="Tìm Kiếm"
+          (click)="timkiem()"
+        />
+      </div>
     </div>
   </div>
-
+  <div class="col-4 col-md-4">
+    <div class="search">
+      <input
+        style="height: 40px; width: 250px"
+        type="text"
+        placeholder="Search"
+        name="name"
+        [(ngModel)]="seachFrom.name"
+      />
+      <button
+        class="fa fa-search"
+        style="height: 40px; width: 40px"
+        (click)="seachByname()"
+      ></button>
+    </div>
+  </div>
   <div class="col-12 col-md-12">
     <table id="customers" style="border-collapse: collapse">
       <tr>
@@ -45,12 +72,12 @@
         <th>Phone</th>
         <th>Địa chỉ</th>
         <th>isAdmin</th>
-        <th>ten dang nhap</th>
+        <th>Tên đăng nhập</th>
       </tr>
       <tr
         *ngFor="
-          let user of sharedDataService.productList
-            | paginate: { itemsPerPage: 12, currentPage: p }
+          let user of sharedDataService.user
+            | paginate: { itemsPerPage: 8, currentPage: p }
         "
       >
         <td>
@@ -73,12 +100,12 @@
         <td>{{ user.id }}</td>
         <td>{{ user.name }}</td>
         <td>{{ user.codeString }}</td>
-        <td>{{ user.dob | date:'yyyy-MM-dd' }}</td>
+        <td>{{ user.dob | date: "yyyy-MM-dd" }}</td>
         <td>{{ user.email }}</td>
         <td>{{ user.phoneNumber }}</td>
         <td>{{ user.address }}</td>
         <td>{{ user.isAdminAccount }}</td>
-        <td>{{user.username}}</td>
+        <td>{{ user.username }}</td>
       </tr>
     </table>
   </div>
