--- a/src/app/component/admin/chartmonth/chartmonth.component.html
+++ b/src/app/component/admin/chartmonth/chartmonth.component.html
@@ -1,47 +1,61 @@
 <div class="animated fadeIn">
-  <div class="card-columns cols-2">
-    <div class="card">
-      <div class="card-header">
-        Line Chart
-        <div class="card-header-actions">
-          <a href="http://www.chartjs.org">
-            <small class="text-muted">docs</small>
-          </a>
+  <div class="row">
+    <h1>Doanh thu của năm {{this.year}}</h1>
+    <div class="col-md-6">
+      <select class="form-select" aria-label="Default select example" [(ngModel)]="year" (ngModelChange)="changingValue()" >
+        <option selected *ngFor="let item of yeared" [value]="item.viewValue"> {{ item.viewValue }}</option>
+      </select>
+    </div>
+    <div class="col-md-6">
+    </div>
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-header">
+          Biểu đồ đường thể hiện doanh thu của từng tháng theo năm
+          {{ this.year }}
         </div>
-      </div>
-      <div class="card-body">
-        <div class="chart-wrapper">
-          <canvas baseChart class="chart"
-          [datasets]="lineChartData"
-          [labels]="lineChartLabels"
-          [options]="lineChartOptions"
-          [colors]="lineChartColours"
-          [legend]="lineChartLegend"
-          [chartType]="lineChartType"
-          (chartHover)="chartHovered($event)"
-          (chartClick)="chartClicked($event)"></canvas>
+        <div class="card-body">
+          <div class="chart-wrapper">
+            <canvas
+              baseChart
+              class="chart"
+              [datasets]="lineChartData"
+              [labels]="lineChartLabels"
+              [options]="lineChartOptions"
+              [colors]="lineChartColours"
+              [legend]="lineChartLegend"
+              [chartType]="lineChartType"
+              (chartHover)="chartHovered($event)"
+              (chartClick)="chartClicked($event)"
+            ></canvas>
+          </div>
         </div>
       </div>
     </div>
-    <div class="card">
-      <div class="card-header">
-        Bar Chart
-        <div class="card-header-actions">
-          <a href="http://www.chartjs.org">
-            <small class="text-muted">docs</small>
-          </a>
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-header">
+          Bar Chart
+          <div class="card-header-actions">
+            <a href="http://www.chartjs.org">
+              <small class="text-muted">docs</small>
+            </a>
+          </div>
         </div>
-      </div>
-      <div class="card-body">
-        <div class="chart-wrapper">
-          <canvas baseChart class="chart"
-          [datasets]="barChartData"
-          [labels]="barChartLabels"
-          [options]="barChartOptions"
-          [legend]="barChartLegend"
-          [chartType]="barChartType"
-          (chartHover)="chartHovered($event)"
-          (chartClick)="chartClicked($event)"></canvas>
+        <div class="card-body">
+          <div class="chart-wrapper">
+            <canvas
+              baseChart
+              class="chart"
+              [datasets]="barChartData"
+              [labels]="barChartLabels"
+              [options]="barChartOptions"
+              [legend]="barChartLegend"
+              [chartType]="barChartType"
+              (chartHover)="chartHovered($event)"
+              (chartClick)="chartClicked($event)"
+            ></canvas>
+          </div>
         </div>
       </div>
     </div>
