--- a/src/app/component/brands/brands.component.html
+++ b/src/app/component/brands/brands.component.html
@@ -1,72 +1,84 @@
-
-    <div class="row">
-      <div class="col-md-12">
-          <div class="product-view-top">
-              <div class="row">
-                  <div class="col-md-4">
-                      <div class="product-search">
-                          <input type="email" value="Search">
-                          <button><i class="fa fa-search"></i></button>
-                      </div>
-                  </div>
-                  <div class="col-md-4">
-                      <div class="product-short">
-                          <div class="dropdown">
-                              <div class="dropdown-toggle" data-toggle="dropdown">Product short by</div>
-                              <div class="dropdown-menu dropdown-menu-right">
-                                  <a href="#" class="dropdown-item">Newest</a>
-                                  <a href="#" class="dropdown-item">Popular</a>
-                                  <a href="#" class="dropdown-item">Most sale</a>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col-md-4">
-                      <div class="product-price-range">
-                          <div class="dropdown">
-                              <div class="dropdown-toggle" data-toggle="dropdown">Product price range</div>
-                              <div class="dropdown-menu dropdown-menu-right">
-                                  <a href="#" class="dropdown-item">$0 to $50</a>
-                                  <a href="#" class="dropdown-item">$51 to $100</a>
-                                  <a href="#" class="dropdown-item">$101 to $150</a>
-                                  <a href="#" class="dropdown-item">$151 to $200</a>
-                                  <a href="#" class="dropdown-item">$201 to $250</a>
-                                  <a href="#" class="dropdown-item">$251 to $300</a>
-                                  <a href="#" class="dropdown-item">$301 to $350</a>
-                                  <a href="#" class="dropdown-item">$351 to $400</a>
-                                  <a href="#" class="dropdown-item">$401 to $450</a>
-                                  <a href="#" class="dropdown-item">$451 to $500</a>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
+<div class="row">
+  <div class="col-md-12">
+    <div class="product-view-top">
+      <form action="" #formSearch="ngForm" (ngSubmit)="search()">
+        <div class="row">
+          <div class="col-md-5">
+            <select
+              style="width: 250px; height: 38px"
+              [(ngModel)]="selectCategory"
+              name="category"
+            >
+              <option [value]="0">Chọn loại sản phẩm</option>
+              <option *ngFor="let item of categorys" [value]="item.id">
+                {{ item.name }}
+              </option>
+            </select>
           </div>
-      </div>
-      <h1>{{ListBrandsId.name}}</h1>
-      <div class="col-md-4" *ngFor="let brands of ListBrandsId | paginate: { itemsPerPage: 9, currentPage: p }">
-          <div class="product-item">
-              <div class="product-title" style= "height: 85px;background-color: white;">
-                  <a style="color: rgb(7, 7, 7);     text-decoration: underline;" href="" routerLink="{{'detail/'+brands.id}}" >{{brands.name}}</a>
-              </div>
-              <div class="product-image">
-                <!-- lấy link localhost:/4200/detail/3 -->
-                <a href="" [routerLink]="['/products/detail/'+brands.id]" routerLinkActive="router-link-active" >
-                  <img  style=" height: 244px;"  src="{{brands.image}}" alt="Product Image">
-                </a>
-                  <!-- <a href="" routerLink="{{'detail/'+cate.id}}">
-                      <img src="{{cate.image}}" alt="Product Image">
-                  </a> -->
-              </div>
-              <div class="product-price" style="background: rgb(231, 185, 185);">
-                  <h3><span>$</span>{{brands.priceSell}}</h3>
-                  <button class="btn" (click)="addCart(brands)"><i class="fa fa-shopping-cart"></i>Buy Now</button>
-              </div>
+          <div class="col-md-5">
+            <select
+              style="width: 250px; height: 38px"
+              [(ngModel)]="selectBrand"
+              name="brand"
+            >
+              <option [value]="0">Chọn hãng sản xuất</option>
+              <option *ngFor="let item of brands" [value]="item.id">
+                {{ item.name }}
+              </option>
+            </select>
           </div>
+          <div class="col-md-2">
+            <input
+              style="width: 120px; height: 40px"
+              type="submit"
+              value="Search"
+            />
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+  <h1>{{ ListBrandsId.name }}</h1>
+  <div
+    class="col-md-4"
+    *ngFor="
+      let brands of ListBrandsId | paginate: { itemsPerPage: 9, currentPage: p }
+    "
+  >
+    <div class="product-item">
+      <div class="product-title" style="height: 85px; background-color: white">
+        <a
+          style="color: rgb(7, 7, 7); text-decoration: underline"
+          href=""
+          routerLink="{{ 'detail/' + brands.id }}"
+          >{{ brands.name }}</a
+        >
       </div>
+      <div class="product-image">
+        <!-- lấy link localhost:/4200/detail/3 -->
+        <a
+          href=""
+          [routerLink]="['/products/detail/' + brands.id]"
+          routerLinkActive="router-link-active"
+        >
+          <img
+            style="height: 244px"
+            src="{{ brands.image }}"
+            alt="Product Image"
+          />
+        </a>
+      </div>
+      <div class="product-price" style="background: rgb(231, 185, 185)">
+        <h3>{{ brands.priceSell | currency: "VND" }}</h3>
+        <button class="btn" (click)="addCart(brands)">
+          <i class="fa fa-shopping-cart"></i>Buy Now
+        </button>
+      </div>
+    </div>
   </div>
-  <!-- Pagination Start -->
-  <div class="col-md-12" style="padding-top: 20px">
-    <pagination-controls (pageChange)="p = $event"></pagination-controls>
-  </div>
-  <!-- Pagination Start -->
+</div>
+<!-- Pagination Start -->
+<div class="col-md-12" style="padding-top: 20px">
+  <pagination-controls (pageChange)="p = $event"></pagination-controls>
+</div>
+<!-- Pagination Start -->
