--- a/src/app/component/category/category.component.html
+++ b/src/app/component/category/category.component.html
@@ -1,23 +1,37 @@
 <div class="row">
   <div class="col-md-12">
     <div class="product-view-top">
-      <form action="">
+      <form action="" #formSearch="ngForm" (ngSubmit)="search()">
         <div class="row">
           <div class="col-md-5">
-            <select style="width: 250px; height: 38px">
-              <option *ngFor="let item of categorys">{{ item.name }}</option>
+            <select
+              style="width: 250px; height: 38px"
+              [(ngModel)]="selectCategory"
+              name="category"
+            >
+              <option [value]="0">Chọn loại sản phẩm</option>
+              <option *ngFor="let item of categorys" [value]="item.id">
+                {{ item.name }}
+              </option>
             </select>
           </div>
           <div class="col-md-5">
-            <select style="width: 250px; height: 38px">
-              <option *ngFor="let item of brands">{{ item.name }}</option>
+            <select
+              style="width: 250px; height: 38px"
+              [(ngModel)]="selectBrand"
+              name="brand"
+            >
+              <option [value]="0">Chọn hãng sản xuất</option>
+              <option *ngFor="let item of brands" [value]="item.id">
+                {{ item.name }}
+              </option>
             </select>
           </div>
           <div class="col-md-2">
             <input
-              style="width: 110px; height: 37px"
+              style="width: 120px; height: 40px"
               type="submit"
-              value="Tìm Kiếm"
+              value="Search"
             />
           </div>
         </div>
@@ -54,7 +68,7 @@
         </a>
       </div>
       <div class="product-price" style="background: rgb(231, 185, 185)">
-        <h3 style="color: black"><span>$</span>{{ cate.priceSell }}</h3>
+        <h3 style="color: black"> {{ cate.priceSell| currency: 'VND' }}</h3>
         <button class="btn" (click)="addCart(cate)">
           <i class="fa fa-shopping-cart"></i>Buy Now
         </button>
