--- a/src/app/component/products/product-list/product-list.component.html
+++ b/src/app/component/products/product-list/product-list.component.html
@@ -1,54 +1,80 @@
-    <div class="row">
-        <div class="col-md-12">
-            <div class="product-view-top">
-              <form action="" #formSearch="ngForm" (ngSubmit)="search()">
-                <div class="row" >
-                    <div class="col-md-5">
-                      <div class="col-md-6">
-                        <h2>Thể Loại </h2>
-                      </div>
-                      <select style="width:250px; height: 38px;" [(ngModel)]="selectCategory" name="category">
-                        <option *ngFor="let item of categorys" [value]="item.id"> {{item.name}}</option>
-                      </select>
-                    </div>
-                    <div class="col-md-5">
-                      <div class="col-md-6">
-                        <h2>Hãng sản xuất </h2>
-                      </div>
-                      <select style="width:250px; height: 38px;" [(ngModel)]="selectBrand" name="brand">
-                        <option *ngFor="let item of brands" [value]="item.id">{{item.name}}</option>
-                      </select>
-                    </div>
-                    <div class="col-md-2" >
-                      <input style=" width: 120px;
-                      height: 40px;
-                      margin-top: 46px; "type="submit" value="Search">
-                    </div>
-                </div>
-              </form>
-            </div>
+<div class="row">
+  <div class="col-md-12">
+    <div class="product-view-top">
+      <form action="" #formSearch="ngForm" (ngSubmit)="search()">
+        <div class="row">
+          <div class="col-md-5">
+            <select
+              style="width: 250px; height: 38px"
+              [(ngModel)]="selectCategory"
+              name="category"
+            >
+              <option [value]="0">Chọn loại sản phẩm</option>
+              <option *ngFor="let item of categorys" [value]="item.id">
+                {{ item.name }}
+              </option>
+            </select>
+          </div>
+          <div class="col-md-5">
+            <select
+              style="width: 250px; height: 38px"
+              [(ngModel)]="selectBrand"
+              name="brand"
+            >
+              <option [value]="0">Chọn hãng sản xuất</option>
+              <option *ngFor="let item of brands" [value]="item.id">
+                {{ item.name }}
+              </option>
+            </select>
+          </div>
+          <div class="col-md-2">
+            <input
+              style="width: 120px; height: 40px"
+              type="submit"
+              value="Search"
+            />
+          </div>
         </div>
-        <div class="col-md-4" *ngFor="let prod of sharedDataService.productList | paginate: { itemsPerPage: 9, currentPage: p }">
-            <div class="product-item">
-                <div class="product-title"  style= "height: 85px;background-color: white;">
-                   <a style="color: rgb(7, 7, 7);text-decoration: underline;" href="" routerLink="{{'detail/'+prod.id}}">{{prod.name}}</a>
-
-                </div>
-                <div class="product-image">
-                    <a href="" routerLink="{{'detail/'+prod.id}}">
-                        <img style=" height: 244px;" src="{{prod.image}}" alt="Product Image">
-                    </a>
-                </div>
-                <div class="product-price" style="background: rgb(231, 185, 185);">
-                    <span style="color: black;"><span>$</span>{{prod.priceSell}}</span>
-                    <button class="btn" (click)="addCart(prod)"><i class="fa fa-shopping-cart"></i>AddToCart</button>
-                </div>
-            </div>
-        </div>
+      </form>
     </div>
-
-    <!-- Pagination Start -->
-    <div class="col-md-12" style="padding-top: 20px">
-      <pagination-controls (pageChange)="p = $event"></pagination-controls>
+  </div>
+  <div
+    class="col-md-4"
+    *ngFor="
+      let prod of sharedDataService.productList
+        | paginate: { itemsPerPage: 9, currentPage: p }
+    "
+  >
+    <div class="product-item">
+      <div class="product-title" style="height: 85px; background-color: white">
+        <a
+          style="color: rgb(7, 7, 7); text-decoration: underline"
+          href=""
+          routerLink="{{ 'detail/' + prod.id }}"
+          >{{ prod.name }}</a
+        >
+      </div>
+      <div class="product-image">
+        <a href="" routerLink="{{ 'detail/' + prod.id }}">
+          <img
+            style="height: 244px"
+            src="{{ prod.image }}"
+            alt="Product Image"
+          />
+        </a>
+      </div>
+      <div class="product-price" style="background: rgb(231, 185, 185)">
+        <span style="color: black">{{ prod.priceSell | currency: "VND" }}</span>
+        <button class="btn" (click)="addCart(prod)">
+          <i class="fa fa-shopping-cart"></i>AddToCart
+        </button>
+      </div>
     </div>
-    <!-- Pagination Start -->
+  </div>
+</div>
+
+<!-- Pagination Start -->
+<div class="col-md-12" style="padding-top: 20px">
+  <pagination-controls (pageChange)="p = $event"></pagination-controls>
+</div>
+<!-- Pagination Start -->
